add: сырой эндпоинт получения суммы подписок
